--- a/springboot-jpa-integration-post/src/main/resources/application.yml
+++ b/springboot-jpa-integration-post/src/main/resources/application.yml
@@ -3,4 +3,4 @@ spring:
     name: spring-jpa
   datasource:    url: jdbc:mysql://localhost:3306/hr
     username: root
-    password: welcome  jpa:    hibernate:      ddl-auto: create    show-sql: true
+    password: welcome  jpa:    show-sql: true
